--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   <li>10 Messages Per Day</li>
                   <li>Unlimited App Usage</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+                <button type="button" class="w-100 btn btn-lg btn-outline-dark">Sign up for free</button>
               </div>
             </div>
           </div>
@@ -159,13 +159,13 @@
                   <li>Unlimited Messages</li>
                   <li>Unlimited App Usag</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Get started</button>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm border-primary">
-              <div class="card-header py-3 text-bg-primary border-primary">
+            <div class="card mb-4 rounded-3 shadow-sm border-dark">
+              <div class="card-header py-3 text-bg-dark border-dark">
                 <h4 class="my-0 fw-normal">Mastiff</h4>
               </div>
               <div class="card-body">
@@ -175,7 +175,7 @@
                   <li>Unlimited Matches & Messages</li>
                   <li>Unlimited App Usage</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
   <!-- Footer -->
   <section id="footer" class="gradient-background">
     <div class="container">
-      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 mt-5 border-top">
         <div class="col mb-3">
           <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
